syntax = "proto3";

option java_package = "ru.dz.sonar";

package report_parts;

message Metadata {
  int64 analysis_date = 1;
  reserved 2; // organization drop
  // duplication of Component.key
  string project_key = 3;

  reserved 4; // deprecated_branch (legacy branches feature)

  int32 root_component_ref = 5;
  bool cross_project_duplication_activated = 6;
  map<string, QProfile> qprofiles_per_language = 7;
  map<string, Plugin> plugins_by_key = 8;

  string branch_name = 9;
  BranchType branch_type = 10;
  string reference_branch_name = 11;

  string relative_path_from_scm_root = 12;
  string scm_revision_id = 13;

  string pull_request_key = 14;
  map<string, string> modules_project_relative_path_by_key = 15;

  string projectVersion = 16;
  string buildString = 17;

  string target_branch_name = 18;

  reserved 19; // forkDate (no longer used)

  map<string, int32> not_analyzed_files_by_language = 20;

  string new_code_reference_branch = 21;

  message QProfile {
    string key = 1;
    string name = 2;
    string language = 3;
    int64 rulesUpdatedAt = 4;
  }

  message Plugin {
    string key = 1;
    int64 updatedAt = 2;
  }

  enum BranchType {
    UNSET = 0;
    BRANCH = 1;
    PULL_REQUEST = 2;
  }
}

message Duplication {
  // Origin position in current file. Only start_line and end_line are provided since we dont support "precise" duplication location.
  TextRange origin_position = 1;
  repeated Duplicate duplicate = 2;
}

message Duplicate {
  // Will be 0 when duplicate is in the same file
  int32 other_file_ref = 1;
  // Only start_line and end_line are provided since we dont support "precise" duplication location.
  TextRange range = 2;
}


message LineCoverage {
  int32 line = 1;

  // Number of conditions to cover (if set, the value must be greater than 0)
  int32 conditions = 2;
  // Is the line has been touched by a unit test ? Returning false means that no test has touched this executable line.
  oneof has_hits {
    bool hits = 3;
  }
  // Number of conditions covered by tests
  oneof has_covered_conditions {
    int32 covered_conditions = 5;
  }
}

message ActiveRule {
  string rule_repository = 1;
  string rule_key = 2;
  Severity severity = 3;
  map<string,string> params_by_key = 4;
  int64 createdAt = 5;
  int64 updatedAt = 6;
  string q_profile_key = 7;
}

message Component {
  int32 ref = 1;

  string name = 3;
  ComponentType type = 4;
  bool is_test = 5;
  string language = 6;
  repeated int32 child_ref = 7 [packed = true];
  repeated ComponentLink link = 8;
  // Only available on PROJECT and MODULE types
  // TODO rename this property -> moduleKey ?
  string key = 10;
  // Only available on FILE type, should always be at least 1
  int32 lines = 11;
  // Only available on PROJECT and MODULE types
  string description = 12;
  FileStatus status = 13;

  // Path relative to project base directory
  string project_relative_path = 14;
  bool markedAsUnchanged = 15;
  string old_relative_file_path = 16;

  enum ComponentType {
    UNSET = 0;
    PROJECT = 1;
    MODULE = 2 [deprecated=true];
    DIRECTORY = 3 [deprecated=true];
    FILE = 4;
  }

  enum FileStatus {
    UNAVAILABLE = 0;
    SAME = 1;
    CHANGED = 2;
    ADDED = 3;
  }
}

message ComponentLink {
  ComponentLinkType type = 1;
  string href = 2;

  enum ComponentLinkType {
    UNSET = 0;
    HOME = 1;
    SCM = 2;
    // SCM_DEV is no more set since 7.1. See SONAR-10299
    IGNORED_SCM_DEV = 3;
    ISSUE = 4;
    CI = 5;
  }
}

message Issue {
  string rule_repository = 1;
  string rule_key = 2;
  // Only when issue component is a file. Can also be empty for a file if this is an issue global to the file.
  string msg = 3;
  Severity severity = 4;
  double gap = 5;
  // Only when issue component is a file. Can also be empty for a file if this is an issue global to the file.
  // Will be identical to the first location of the first flow
  TextRange text_range = 6;
  repeated Flow flow = 7;
  bool quickFixAvailable = 8;
  optional string ruleDescriptionContextKey = 9;
  repeated MessageFormatting msgFormatting = 10;
}

//?
//message ExternalIssue {
//
//}

message Flow {
  repeated IssueLocation location = 1;
  string description = 2;
  FlowType type = 3;
}

enum FlowType {
  UNDEFINED = 0;
  DATA = 1;
  EXECUTION = 2;
}

message IssueLocation {
  int32 component_ref = 1;
  // Only when component is a file. Can be empty for a file if this is an issue global to the file.
  TextRange text_range = 2;
  string msg = 3;
  repeated MessageFormatting msgFormatting = 4;
}

message TextRange {
  int32 start_line = 1;
  // End line (inclusive)
  int32 end_line = 2;
  int32 start_offset = 3;
  int32 end_offset = 4;
}

enum Severity {
  UNSET_SEVERITY = 0;
  INFO = 1;
  MINOR = 2;
  MAJOR = 3;
  CRITICAL = 4;
  BLOCKER = 5;
}

message MessageFormatting {
  int32 start = 1;
  int32 end = 2;
  MessageFormattingType type = 3;
}

enum MessageFormattingType {
  CODE = 0;
}

message Measure {
  string metric_key = 1;
  oneof value {
    BoolValue boolean_value = 2;
    IntValue int_value = 3;
    LongValue long_value = 4;
    DoubleValue double_value = 5;
    StringValue string_value = 6;
  }

  message BoolValue {
    bool value = 1;
    string data = 2;
  }

  message IntValue {
    int32 value = 1;
    string data = 2;
  }

  message LongValue {
    int64 value = 1;
    string data = 2;
  }

  message DoubleValue {
    double value = 1;
    string data = 2;
  }

  message StringValue {
    string value = 1;
  }
}
